# PlanMyTrip

./: .gitignore  DEVELOPER_QUICK_START.md  DOCUMENTATION_COMPLETE.md  FRONTEND_INTEGRATION_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  docker-compose.yml  hotel-test.ipynb
backend/: COMPONENTS_SUMMARY.md  Dockerfile  HITL_TESTING_GUIDE.md  HUMAN_IN_LOOP_GUIDE.md  IMPLEMENTATION_GUIDE.md  agent.py  chat.py  constraints.py  human_in_loop.py  interactive_refinement.py  main.py  memory.py  optimization_agent.py  pdf_export.py  pyproject.toml  requirements.txt  route_optimizer.py  scoring.py  test_enhanced_system.py  tools.py  user_preferences.py
backend/user_profiles/: default_profile.json  test_user_123_profile.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatInterface.jsx  ItineraryView.jsx  MapView.jsx  PastTrips.jsx  TripForm.jsx
